# digital-wellbeing

./: Cargo.toml  README.md  flake.nix
crates/core/: Cargo.toml
crates/core/src/: clock.rs  dbus_constants.rs  domain.rs  error.rs  event_types.rs  lib.rs  valuetypes.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bus_resolution.rs  lib.rs  main.rs  signal.rs
crates/daemon/src/blocking/: buffer.rs  core.rs  domain.rs  mod.rs  overlay.rs  test_support.rs
crates/daemon/src/blocking/data/: mod.rs  persistence.rs
crates/daemon/src/categorization/: core.rs  domain.rs  mod.rs
crates/daemon/src/dbus/: controller.rs  core.rs  data.rs  domain.rs  methods.rs  mod.rs  signals.rs
crates/daemon/src/platform/: mod.rs
crates/daemon/src/platform/linux/: manager.rs  mod.rs  screen_lock.rs  suspend.rs
crates/daemon/src/policy/: core.rs  domain.rs  mod.rs
crates/daemon/src/policy/data/: insert.rs  mod.rs  models.rs  queries.rs
crates/daemon/src/reports/: core.rs  mod.rs
crates/daemon/src/reports/data/: mod.rs  models.rs
crates/daemon/src/store/: connection.rs  migrations.rs  mod.rs  schema.rs
crates/daemon/src/tracking/: core.rs  domain.rs  mod.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  chart.rs  components.rs  lib.rs  main.rs  theme.rs
crates/gui/src/appshell/: data.rs  domain.rs  mod.rs  ui.rs
crates/gui/src/cache/: mod.rs
crates/gui/src/dashboard/: data.rs  domain.rs  mod.rs  ui.rs
crates/gui/src/dbus/: mod.rs
crates/gui/src/policies/: data.rs  domain.rs  mod.rs  ui.rs
crates/gui/src/reports/: data.rs  domain.rs  mod.rs  ui.rs
crates/gui/src/screens/: mod.rs
crates/gui/src/screens/dashboard/: mod.rs
crates/gui/src/screens/policies/: mod.rs
crates/gui/src/screens/reports/: mod.rs
deploy/arch/: PKGBUILD
deploy/dbus/: org.wellbeing.v1.Controller.conf  org.wellbeing.v1.Manager.conf
deploy/debian/: changelog  control  rules
deploy/system-services/: org.wellbeing.v1.Controller.service
deploy/systemd/: digital-wellbeing-daemon.service
docs/: README.md
docs/architecture/: 01-rationale.md  02-platform.md  03-linux-platform.md  04-plugin-ipc.md  05-daemon-auth.md  06-daemon-dbus.md  07-rbac.md  08-modules.md  09-state-flow.md  10-deployment.md  11-implementation-plan.md  12-open-questions.md  13-deployment-modes.md  README.md
docs/features/: 01-blocking.md  02-categorization.md  03-ui-design.md
docs/persistence/: 01-database.md
docs/planning/: 01-roadmap.md
docs/quality/: 01-performance.md  02-testing.md
migrations/2026-07-18-000001_initial_schema/: up.sql
plugins/hyprland/: .clang-tidy  CMakeLists.txt  CMakePresets.json
plugins/hyprland/app/: CMakeLists.txt
plugins/hyprland/app/include/: idle_tracker.hpp  lockdown.hpp  logging.hpp  plugin_state.hpp  types.hpp  wellbeing_manager.hpp
plugins/hyprland/app/src/: idle_tracker.cpp  lockdown.cpp  main.cpp  wellbeing_manager.cpp
plugins/hyprland/app/test/: CMakeLists.txt  dbus_serialization_test.cpp  test.cpp
plugins/hyprland/cmake/: ClangdHelpers.cmake  Hyprland.cmake  TargetEnv.cmake
