[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/daemon",
    "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1"
zbus = { version = "5" }
zvariant = { version = "5", features = ["chrono"] }
