[package]
name = "wellbeing-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
wellbeing-core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7" }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel-async = { version = "0.9", features = ["sqlite"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus.workspace = true
procfs = "0.18"
nix = { version = "0.31", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
