[package]
name = "wellbeing-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
wellbeing-core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7" }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel-async = { version = "0.9", features = ["sqlite", "deadpool", "tokio"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus.workspace = true
zvariant.workspace = true
procfs = "0.18"
nix = { version = "0.31", features = ["signal", "process", "user"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
