[package]
name = "wellbeing-gui"
version.workspace = true
edition.workspace = true

[dependencies]
wellbeing-core = { path = "../core" }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { version = "0.31", features = ["user"] }
futures = "0.3"
zbus.workspace = true
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", optional = true, features = ["font-kit", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", optional = true }

[features]
default = ["gui-gpui"]
gui-gpui = ["dep:gpui", "dep:gpui_platform", "dep:gpui-component"]
