cmake_minimum_required(VERSION 3.27)
project(wellbeing-lockdown LANGUAGES CXX)

# ── GCC guard ────────────────────────────────────────────────────────────────
# Hyprland loads the plugin into compositor address space. The hook
# function-pointer casts used by Event::bus() listeners are rejected by Clang's
# strict type-punning rules. GCC is the only supported compiler.
if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    message(FATAL_ERROR "Hyprland plugins must be built with GCC (g++), not ${CMAKE_CXX_COMPILER_ID}.")
endif()

# ── Standards ────────────────────────────────────────────────────────────────
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# ── IPO ──────────────────────────────────────────────────────────────────────
include(CheckIPOSupported)
check_ipo_supported(RESULT IPO_SUPPORTED OUTPUT error)
if(IPO_SUPPORTED)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

# ── Sources ──────────────────────────────────────────────────────────────────
file(GLOB_RECURSE PLUGIN_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

add_library(wellbeing-lockdown SHARED ${PLUGIN_SOURCES})

# Hyprland plugins load by path; drop the `lib` prefix so the artifact is
# `wellbeing-lockdown.so` (matches PLUGIN_SO_NAME and Hyprland conventions).
set_target_properties(wellbeing-lockdown PROPERTIES PREFIX "")

target_include_directories(wellbeing-lockdown PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src)

# ── System dependencies (pkg-config) ─────────────────────────────────────────
# Only hyprland is needed directly. The .pc file is generated by the superbuild
# (cmake/Hyprland.cmake) with no external Requires — the plugin .so loads into
# Hyprland's process, so all transitive symbols (libdrm, wayland-server, …) are
# resolved at runtime by the compositor.
find_package(PkgConfig REQUIRED)

pkg_check_modules(deps REQUIRED IMPORTED_TARGET hyprland)

# <hyprland/render/OpenGL.hpp> transitively includes libdrm (drm_fourcc.h) and
# other Hyprland dependency headers. We only need their INCLUDE paths to compile
# the plugin — every symbol is resolved at runtime inside Hyprland's process, so
# these libraries are NOT linked. Their .pc files are staged into
# CMAKE_STAGING_PREFIX by stage_host_hyprland_deps() (cmake/Hyprland.cmake) at
# superbuild configure time as flat, Requires-free files, so they resolve purely
# through PKG_CONFIG_USE_CMAKE_PREFIX_PATH (staging only) with NO host
# PKG_CONFIG_PATH leakage and no Requires closure to chase.
pkg_check_modules(hl_headers QUIET
    libdrm
    hyprgraphics
    hyprcursor
    hyprutils
    hyprlang
    wayland-server
    xkbcommon
    aquamarine
    cairo
    libinput
    pixman-1
    egl
)

if(hl_headers_FOUND)
    target_include_directories(wellbeing-lockdown PRIVATE ${hl_headers_INCLUDE_DIRS})
    message(STATUS "wellbeing-lockdown: transitive Hyprland header include dirs: ${hl_headers_INCLUDE_DIRS}")
endif()

target_link_libraries(wellbeing-lockdown PRIVATE PkgConfig::deps rt)

# ── sdbus-c++: built from source and linked STATICALLY ─────────────────────
# The plugin is loaded into the compositor address space; we want the deployed
# .so to be self-contained, so our first-party D-Bus dependency is compiled in.
# System libs (hyprland, libdrm, pixman, …) stay dynamic — they are always
# present on a Hyprland host. libsystemd (sd-bus, pulled in by sdbus-c++) also
# remains a shared system lib; only the sdbus-c++ *objects* are statically
# embedded into wellbeing-lockdown.so.
include(FetchContent)
fetchcontent_declare(
    sdbus-cpp
    GIT_REPOSITORY https://github.com/Kistler-Group/sdbus-cpp.git
    GIT_TAG v2.3.1
    GIT_SHALLOW True
    GIT_PROGRESS True
    CMAKE_ARGS
        -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=ON   # needed for a .so
        -DBUILD_SHARED_LIBS:BOOL=OFF                # build sdbus-c++ as a STATIC lib
        -DSDBUSCPP_BUILD_DOCS:BOOL=OFF              # no doxygen in build env
        -DSDBUSCPP_BUILD_CODEGEN:BOOL=OFF
        -DSDBUSCPP_BUILD_TESTS:BOOL=OFF
        -DSDBUSCPP_BUILD_LIBSYSTEMD:BOOL=OFF        # link the system libsystemd.so
)
fetchcontent_makeavailable(sdbus-cpp)
# sdbus-c++ v2.x exposes a single target (static when BUILD_SHARED_LIBS=OFF).
target_link_libraries(wellbeing-lockdown PRIVATE sdbus-c++)

# ── Warning flags ────────────────────────────────────────────────────────────
# Flags from the project template, excluding any that break Hyprland headers.
target_compile_options(
    wellbeing-lockdown
    PRIVATE -Wall
            -Wextra
            -Wundef
            -Wshadow
            -Wpedantic
            -Wconversion
            -Wcast-align
            -Wwrite-strings
            -Wpointer-arith
            -Wstrict-aliasing
            -Werror=format-security
            -Wno-missing-field-initializers
)

# ── Tests ────────────────────────────────────────────────────────────────────
add_subdirectory(test)

# ── LSP / clangd ─────────────────────────────────────────────────────────────
include(ClangdHelpers)
generate_clangd_config("${CMAKE_CURRENT_SOURCE_DIR}")

# Expose the real compile DB (compile_commands.json) at the source root so
# clangd uses the actual -std=... / -I flags. Requires the ExternalProject
# build to have run at least once (the .json is generated during configure).
link_compile_commands(wellbeing-lockdown "${CMAKE_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")

# Force CMake re-configure on next build so clangd sees source changes.
add_custom_target(force_reconfigure_clangd ALL
    COMMAND ${CMAKE_COMMAND} -E touch "${CMAKE_CURRENT_LIST_FILE}"
    COMMENT "Triggering CMake re-configure for clangd update..."
    VERBATIM
)
